--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DATABASE_HOST=dajavas.c6bptdbrj25h.ap-northeast-2.rds.amazonaws.com
+DATABASE_HOST=dajavasdb.cvcxxhi9mfti.ap-northeast-2.rds.amazonaws.com
 DATABASE_USER=admin
-DATABASE_PASSWORD=ruxia1109
+DATABASE_PASSWORD=abc12345
 DATABASE_PORT=13306
