--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,7 @@
 DATABASE_HOST=dajavasdb.cvcxxhi9mfti.ap-northeast-2.rds.amazonaws.com
-DATABASE_USER=root
+DATABASE_USERNAME=root
 DATABASE_PASSWORD=ruxia1109
+DATABASE_NAME='dajavasdb'
 DATABASE_PORT=13306
+ACCESS_SECRET=1122
+REFRESH_SECRET=3344
