FIX: fish,map,ranking

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,7 @@
 DATABASE_HOST=dajavasdb.cvcxxhi9mfti.ap-northeast-2.rds.amazonaws.com
-DATABASE_USER=root
-DATABASE_PASSWORD=ruxia1109
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=1234
+DATABASE_NAME='dajavas'
 DATABASE_PORT=13306
+HTTPS_PORT=8080
+ACCESS_SECRET=1234
