--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^14.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
