--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,9 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.16.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "react-google-login": "^5.2.2",
+    "sequelize": "^6.16.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
