--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,10 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
+/build
 /node_modules
 /.pnp
 .pnp.js
-
+package-lock.json
 
 oauth.js
 
@@ -12,7 +12,7 @@ oauth.js
 /coverage
 
 # production
-/build
+
 
 # misc
 .DS_Store
