--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,6 @@
     "dotenv": "^14.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
@@ -22,17 +21,16 @@
     "react-scripts": "5.0.0",
     "react-wavify": "^1.5.7",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1",
     "source-map-explorer": "^2.5.2",
     "styled-components": "^5.3.3",
     "styled-media-query": "^2.1.2",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "redux-thunk": "^2.4.1",
+    "redux-devtools-extension": "^2.13.9"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--max-old-space-size=4096 HTTPS=true SSL_CRT_FILE=cert.pem SSL_KEY_FILE=key.pem react-scripts start",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 GENERATE_SOURCEMAP=false react-scripts build",
+    "start": "NODE_OPTIONS=--max-old-space-size=12000 HTTPS=true SSL_CRT_FILE=cert.pem SSL_KEY_FILE=key.pem react-scripts start",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=12000 GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
